maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:8: error: (Int, Int) does not take parameters
  while(Coord(sol)!=()){
             ^ShortestPathMaze:9: error: (Int, Int) does not take parameters
    var a = Coord(sol).size-1
                 ^ShortestPathMaze:11: error: value update is not a member of (Int, Int)
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
      ^ShortestPathMaze:11: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                        ^ShortestPathMaze:31: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:11: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                                              ^ShortestPathMaze:11: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                                                            ^ShortestPathMaze:12: error: value update is not a member of (Int, Int)
      Coord(sol)=Coord(sol).tail()
      ^ShortestPathMaze:12: error: (Int, Int) does not take parameters
      Coord(sol)=Coord(sol).tail()
                      ^ShortestPathMaze:13: error: value update is not a member of (Int, Int)
      Coord(sol)=Coord(sol).tail()
      ^ShortestPathMaze:13: error: (Int, Int) does not take parameters
      Coord(sol)=Coord(sol).tail()
                      ^ShortestPathMaze:31: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:36: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x,y-1)
              ^ShortestPathMaze:42: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x-1,y)
              ^ShortestPathMaze:48: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x+1,y)
              ^ShortestPathMaze:54: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x,y+1)
              ^